Doc: crawling code update

--- a/Data_Crawling.ipynb
+++ b/Data_Crawling.ipynb
@@ -1,12 +1,70 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a9202465-94c7-42ad-9e87-48dd51aa0ae8",
+   "metadata": {},
+   "source": [
+    "### 글로벌 도시 현재시간 & 날씨 crawling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e895ece-73be-41f8-bae8-8eb37df89c6f",
+   "execution_count": 1,
+   "id": "49f454d7-4c83-49e2-b975-b674ec51dbe5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2659eb31-825b-40b7-b9d3-c7d80c7397e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# driver 설정\n",
+    "from selenium import webdriver \n",
+    "from selenium.webdriver.common.by import By\n",
+    "        \n",
+    "# chrome driver\n",
+    "driver = webdriver.Chrome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dded540a-45a5-445a-9c6a-174405c37cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# url='https://www.accuweather.com/'\n",
+    "\n",
+    "# driver.get(url)\n",
+    "# time.sleep(1.5)\n",
+    "# browser.find_element(By.CLASS_NAME, 'search_input').click()\n",
+    "# browser.find_element(By.CLASS_NAME, 'search_input').send_keys('날씨')\n",
+    "# browser.find_element(By.CLASS_NAME, 'btn_search').click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b5e86ac-0b13-4b28-977b-f885c6f6d71b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 체감, 습도, 풍향\n",
+    "# data = browser.find_element(By.CLASS_NAME, 'summary_list').text\n",
+    "# data.split(\" \")"
+   ]
   }
  ],
  "metadata": {
